--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,86 @@
-h1 {
-  color: aqua;
+body {
+  margin: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.header {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  max-width: 1160px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.logo {
+  width: 100px;
+  height: 100px;
+}
+
+.header-menu {
+  display: flex;
+  gap: 40px;
+  flex-wrap: wrap;
+}
+
+.header-menu a {
+  padding: 16px 0px;
+  display: inline-block;
+  color: #000;
+  font-size: 18px;
+  position: relative;
+}
+.header-menu a:after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 0px;
+  position: absolute;
+  background-color: aqua;
+  margin-top: 4px;
+}
+.header-menu a:hover:after {
+  width: 100%;
+  transition: all 0.3s;
+}
+
+@media (max-width: 800px) {
+  .header-menu {
+    gap: 20px;
+  }
+  .header-menu a {
+    background-color: #111111;
+    padding: 12px 16px;
+    border-radius: 4px;
+  }
+  .header-menu a:hover {
+    background-color: #222222;
+  }
+
+  .header a::after {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .header-menu {
+    gap: 12px;
+  }
+  .header-menu a {
+    padding: 8px 12px;
+    font-size: 14px;
+  }
 }
